--- a/client/index.html
+++ b/client/index.html
@@ -3,26 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YOLO Labelling Tool - Create object detection annotations with ease</title>
+    <title>
+      YOLO Labelling Tool - Create object detection annotations with ease
+    </title>
 
     <!-- OpenGraph Meta Tags -->
     <meta property="og:title" content="YOLO Labelling Tool" />
-    <meta property="og:description" content="A modern, web-based tool for creating and editing YOLO format image annotations with an intuitive interface." />
+    <meta
+      property="og:description"
+      content="A modern, web-based tool for creating and editing YOLO format image annotations with an intuitive interface."
+    />
     <meta property="og:image" content="/preview.png" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="YOLO Labelling Tool" />
-    <meta name="twitter:description" content="Create YOLO format annotations with an intuitive web interface." />
+    <meta
+      name="twitter:description"
+      content="Create YOLO format annotations with an intuitive web interface."
+    />
     <meta name="twitter:image" content="/preview.png" />
 
     <!-- Additional Meta Tags -->
-    <meta name="description" content="Create and edit YOLO format image annotations with an intuitive interface. Features include multi-image support, class management, and easy export." />
+    <meta
+      name="description"
+      content="Create and edit YOLO format image annotations with an intuitive interface. Features include multi-image support, class management, and easy export."
+    />
     <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-29XND3K0Q7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-29XND3K0Q7");
+    </script>
   </body>
 </html>
